--- a/markdown-styles.css
+++ b/markdown-styles.css
@@ -65,11 +65,12 @@ p {
 ul {
     font-size: 18px;
     margin-left: 20px;
+    margin-top: 5px;
 }
 
 li {
     font-size: 16px;
-    line-height: 0.75;
+    line-height: 1.1;
 }
 
 a {
