--- a/markdown-styles.css
+++ b/markdown-styles.css
@@ -6,6 +6,36 @@ body {
     margin: 30px 40px 10px 25px;
 }
 
+#container {
+    display: flex;
+    height: 100vh;
+}
+
+
+#fileExplorer {
+    width: 20%;
+    padding: 0px;
+    overflow-y: auto;
+    border-right: 1px solid #3d3d3d;
+}
+
+#fileExplorer ul{
+    padding: 0px;
+}
+
+#markdownContent {
+    width: 60%;
+    padding: 20px;
+    overflow-y: auto;
+}
+
+#tableOfContents {
+    width: 20%;
+    padding: 10px;
+    overflow-y: auto;
+    border-left: 1px solid #3d3d3d;
+}
+
 h1 {
     font-size: 35px;
     color: white;
