--- a/markdown-styles.css
+++ b/markdown-styles.css
@@ -13,7 +13,7 @@ body {
 
 
 #fileExplorer {
-    width: 20%;
+    width: 15%;
     padding: 0px;
     overflow-y: auto;
     border-right: 1px solid #3d3d3d;
@@ -24,16 +24,20 @@ body {
 }
 
 #markdownContent {
-    width: 60%;
+    width: 70%;
     padding: 20px;
     overflow-y: auto;
 }
 
 #tableOfContents {
-    width: 20%;
+    width: 15%;
     padding: 10px;
     overflow-y: auto;
     border-left: 1px solid #3d3d3d;
+}
+
+#tableOfContents ul{
+    padding: 0px;
 }
 
 h1 {
